--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
      <dependency>
       <groupId>org.exist-db</groupId>
       <artifactId>exist-core</artifactId>
-      <version>4.4.0</version>
+      <version>[5.0.0-RC5,)</version>
     </dependency>
     
   </dependencies>
